url-shortener-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: shortener.local
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: url-shortener-service
            port:
              number: 80
